--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,34 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/QPortal
-spring.datasource.username=postgres
-spring.datasource.password=master
-spring.jpa.generate-ddl=true
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.datasource-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/QPortal
+spring.datasource.username=qportal
+spring.datasource.password=qportalpassword
 
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.show_sql=true
+#spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:liquibase/db-changelog-master.xml
+spring.liquibase.url=jdbc:postgresql://localhost:5432/QPortal
+spring.liquibase.user=qportal
+spring.liquibase.password=qportalpassword
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=questionnaireportalbot@gmail.com
+spring.mail.password=qportal123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
 
 
 
