--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.jpa.open-in-view=true
 server.port=8080
 
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-postgresql.sql
+spring.session.jdbc.table-name=SPRING_SESSION
+server.servlet.session.timeout=3600
+
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
